# MM-Neural-Adjoint

./: README.md  install.sh  pyproject.toml  setup.py
examples/: .gitignore  example1.ipynb  example1.py  mlflow.db
examples/data/: data_y_tiny.csv
examples/val_results/: val_Xpred.csv  val_Xtruth.csv  val_Ytruth.csv
mm_neural_adjoint/: __init__.py
mm_neural_adjoint/models/: NA.py  __init__.py
